apps/usenet/lidarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: usenet
spec:
  ports:
    - port: 8686
      targetPort: 8686
  selector:
    app: lidarr
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: ClusterIP
